--- a/src/app/css/addItem.css
+++ b/src/app/css/addItem.css
@@ -1,17 +1,13 @@
-#add-todo{
+#add-topay{
   display: flex;
+  height: 50px;
+  width: 100px;
+  align-items: center;
+
 }
 
-#add-todo input[type="text"]{
-    flex-basis: 0;
-    flex-grow: 7;
-    padding: 10px;
-    border: 2px solid #7f4cc1;
-    border-radius: 4px 0 0 4px;
-    color: #777;
-}
 
-#add-todo input[type="submit"]{
+#add-topay input[type="submit"]{
     flex-basis: 0;
     flex-grow: 3;
     padding: 10px;
